# TripAgent

./: .dockerignore  .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/kyuriagents/: __init__.py
backend/kyuriagents/ingestion/: __init__.py  indexing.py  parsers.py  redis_queue.py  service.py  store.py
backend/kyuriagents/memory/: README.md  __init__.py  compression.py  in_memory.py  indexing.py  langmem.py  maintenance.py  postgres.py  service.py  types.py
backend/kyuriagents/middleware/: __init__.py  retrieval.py
backend/kyuriagents/profile/: __init__.py  postgres.py  service.py  types.py
backend/kyuriagents/rag/: README.md  __init__.py  _text.py  elasticsearch.py  hybrid.py  in_memory.py  metadata.py  milvus.py  postgres.py  query.py  rerank.py  stratrag.py  types.py
backend/kyuriagents/runtime/: README.md  __init__.py  config.py  dashscope.py  errors.py  evidence.py  factory.py  mcp.json.example  mcp.py  postgres.py  runtime.env.example  time_context.py  token_budget.py
backend/kyuriagents/server/: __init__.py  app.py  identity.py  pending.py  summary.py
backend/kyuriagents/tasks/: __init__.py  evidence.py  graph_runtime.py  runtime.py  store.py  types.py
backend/kyuriagents/tools/: __init__.py  audit.py  middleware.py  policy.py  registry.py  types.py
backend/kyuriagents/travel/: __init__.py  service.py  tools.py
backend/kyuriagents/websearch/: __init__.py  service.py  tools.py
backend/scripts/: __init__.py  api_server.py  bootstrap_runtime.py  ingestion_worker.py  memory_index.py  memory_smoke.py  profile_smoke.py  rag_agent_smoke.py  stratrag_rag_eval.py  travel_tools_smoke.py
backend/scripts/RAGAS/: RAGAS.env.example  README.md  eval_common.py  prepare_query_embeddings.py  startRAGAS  tourism_eval.jsonl  tourism_query_embeddings.jsonl  tourism_ragas_eval.py  (+5 more)
backend/tests/: test_task_profile_candidates.py
deploy/: README.md  (+8 more)
(+28 files in other folders)
